kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph
  namespace: rook-ceph
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:chess-rook
    hajimari.io/group: storage
    hajimari.io/appName: Rook
spec:
  hostnames:
    - "rook.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
