kubernetes/apps/rook-ceph/rook-ceph/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph
  annotations:
    external-dns/is-public: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:chess-rook
    hajimari.io/group: storage
    hajimari.io/appName: Rook
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-internal-default-forwardauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "rook.${SECRET_DOMAIN}"
      secretName: "rook.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: rook.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  number: 7000
